<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_subscription"
            android:icon="@drawable/ic_workspace_premium"
            android:title="@string/my_subscription" />

        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/ic_campaign"
            android:title="@string/notice_board" />
    </group>

    <item android:title="@string/our_social_media">
        <menu>
            <item
                android:id="@+id/nav_social_dialog"
                android:icon="@drawable/ic_group_add"
                android:title="@string/quick_follow" />

            <item
                android:id="@+id/nav_social_fragment"
                android:icon="@drawable/ic_public"
                android:title="@string/our_social_media" />
        </menu>
    </item>

    <item android:title="@string/application_preferences">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share_this_app" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>